margin and overflow fix for mobile

--- a/main.css
+++ b/main.css
@@ -170,7 +170,7 @@ ul li img {
 @media only screen and (max-width: 768px) {
 
 body {
-    overflow-y: visible;
+    overflow: scroll;
 }
 
 .grid {
@@ -178,6 +178,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 2em auto;
 }
 
 .logo {
